--- a/packages/styled-components/package.json
+++ b/packages/styled-components/package.json
@@ -62,8 +62,8 @@
     "tslib": "2.6.2"
   },
   "peerDependencies": {
-    "react": ">= 16.8.0",
-    "react-dom": ">= 16.8.0"
+    "react": "*",
+    "react-dom": "*"
   },
   "devDependencies": {
     "@babel/core": "7.24.5",
@@ -80,8 +80,8 @@
     "@types/jest": "29.5.12",
     "@types/js-beautify": "1.14.3",
     "@types/node": "18.19.31",
-    "@types/react": "17.0.80",
-    "@types/react-dom": "17.0.25",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "@types/react-frame-component": "4.1.6",
     "@types/react-native": "0.69.26",
     "@types/react-test-renderer": "17.0.9",
@@ -98,11 +98,11 @@
     "js-beautify": "1.15.1",
     "prettier": "3.2.5",
     "prop-types": "15.8.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-frame-component": "4.1.3",
-    "react-native": "0.70.15",
-    "react-test-renderer": "17.0.2",
+    "react-native": "0.74.3",
+    "react-test-renderer": "18.2.0",
     "rollup": "3.29.4",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-json": "4.0.0",
